# NailBot

./: .env.onprem.example  .env.saas.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  compose.yaml  docker-compose.yml  servers.json
.github/workflows/: ci-ghcr.yml
docs/: ADMIN_GUIDE.md  ADMIN_PANEL.md  ARCHITECTURE.md  BUSINESS_RULES.md  DB_SCHEMA.md  DEPLOY.md  ERROR_HANDLING.md  FSM_GUIDE.md  HANDLERS_USER.md  LOGGING.md  MODELS.md  README.md  REMINDERS.md  ROADMAP.md  SCHEDULER.md  SETUP.md  SUBSCRIPTION.md  TESTING.md  UI_GUIDE.md  USER_GUIDE.md  VALIDATION_RULES.md
docs/tasks/: 0000-database-choise-and-i18n.md  0000-separate-api-service-and-bot-handler.md  0001-init-project-structure.md  0002-setup-database-and-models.md  0003-implement-basic-bot-handlers.md  0004-add-fsm-for-booking-flow.md  0005-implement-calendar-keyboard.md  0006-implement-time-slots-selection.md  0007-implement-user-data-collection.md  0008-implement-appointment-confirmation.md  0009-implement-appointment-reminders.md  0010-implement-my-appointments.md  0011-implement-admin-panel.md  0012-implement-error-handling.md  0013-final-testing-and-documentation.md  0014-hybrid-tenant-isolation-and-routing.md  0015-onprem-license-key-system.md  0016-automated-deployment-saas-vs-onprem.md
locales/: en.ftl  ru.ftl
migrations/: 001_init.sql
scripts/: run-api.ps1  run-api.sh  run-bot.ps1  run-bot.sh  setup-onprem.ps1  setup-onprem.sh
src/: config.rs  i18n.rs  lib.rs  main.rs  reminders.rs  states.rs  tenant.rs
src/api/: mod.rs  v1.rs
src/bot/: mod.rs  (+2 more)
(+30 files in other folders)
