[package]
name = "nailbot"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "nailbot-api"
path = "src/bin/api.rs"

[[bin]]
name = "nailbot-bot"
path = "src/bin/bot.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
unic-langid = "0.9"

[dev-dependencies]
rstest = "0.22"
